# Create3_Project

./: .gitignore  README.md  camCal_300_300.txt  camCam_300_300.yaml  required_repos.repos  rtt_ur_trajectory.cpp
RPLIDAR_A1_description/: CMakeLists.txt  package.xml
apriltag_gazebo/: CMakeLists.txt  package.xml
apriltag_gazebo/launch/: apriltag_gazebo.launch.py  apriltag_gazebo.launch.xml  apriltag_simulation.launch.py  apriltag_single.launch.py
apriltag_ros/cfg/: tags_36h11.yaml
create3_sim_total/: CMakeLists.txt  package.xml
create3_sim_total/launch/: create3_ignition.launch.py  create3_sim_SLAM.launch.py  robot_description.launch.py
create3_sim_total/rviz/: sim_SLAM_config.rviz
create3_sim_total/urdf/: create3_total.urdf.xacro
docs/: README.md  _coverpage.md  index.html
docs/images/: rsp_project_create3.json
notes/: apriltag_sim_notes.txt  camera_calib_notes.txt  create3_sim_notes.txt  mapping_notes.txt  meetingNotes  oakd_apriltag_notes.txt  oakd_driver_notes.txt
oakd_lite_description/: CMakeLists.txt  package.xml
oakd_lite_description/config/: oakd_lite_rviz_config.rviz
oakd_lite_description/launch/: oakd_bringup.launch.xml  oakd_bringup_april.launch.xml
oakd_lite_description/urdf/: common_properties.urdf.xacro  oakd_lite.urdf.xacro  oakd_lite.xacro  oakd_lite_april.urdf.xacro  oakd_lite_april.xacro
rplidar_a1_description/: CMakeLists.txt  package.xml  sim_test.rviz
rplidar_a1_description/launch/: rplidar_sim_test.launch.xml  rplidar_startup.launch.xml
rplidar_a1_description/urdf/: rplidar.urdf  rplidar.urdf.xacro  rplidar.xacro
(+11 files in other folders)
