<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_sim_total</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="spencer.powers197@gmail.com">scp</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>irobot_create_common_bringup</depend>
  <depend>irobot_create_control</depend>
  <depend>irobot_create_description</depend>
  <depend>irobot_create_nodes</depend>
  <depend>irobot_create_toolbox</depend>
  <depend>irobot_create_ignition_bringup</depend>
  <depend>irobot_create_ignition_plugins</depend>
  <depend>irobot_create_ignition_sim</depend>
  <depend>irobot_create_ignition_toolbox</depend>
  <depend>oakd_lite_description</depend>
  <depend>rplidar_a1_description</depend>
  <depend>apriltag</depend>
  <depend>apriltag_msgs</depend>
  <depend>apriltag_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
